--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: ai_proof
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: '>=3.2.3 <4.0.0'
+  sdk: ">=3.2.3 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -31,10 +31,31 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
+  camerawesome: ^2.0.1
+  ocr_scan_text: ^1.3.1
+  file_picker: ^5.5.0
+  flutter_native_splash: ^2.3.10
+  flutter_svg: ^2.0.10+1
+  remixicon: ^1.2.0
+  intl: ^0.19.0
+  logger: ^2.1.0
+  lottie: ^3.1.0
+  path: ^1.8.3
+  tutorial_coach_mark: ^1.2.11
+  sqflite: ^2.3.2
+  auto_size_text: ^3.0.0
+  flutter_bloc: ^8.0.0
+
+flutter_native_splash:
+  color: "#3336AB"
+  image:
+
+  android: true
+  ios: true
+  fullscreen: true
 
 dev_dependencies:
   flutter_test:
@@ -52,7 +73,6 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
