--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -89,22 +89,15 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
 
-  # To add custom fonts to your application, add a fonts section here,
-  # in this "flutter" section. Each entry in this list should have a
-  # "family" key with the font family name, and a "fonts" key with a
-  # list giving the asset and other descriptors for the font. For
-  # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
-  #
-  # For details regarding fonts from package dependencies,
-  # see https://flutter.dev/custom-fonts/#from-packages
+  fonts:
+    - family: Outfit
+      fonts:
+        - asset: lib/assets/fonts/outfit/Outfit-Black.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-Bold.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-ExtraBold.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-ExtraLight.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-Light.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-Medium.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-Regular.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-SemiBold.ttf
+        - asset: lib/assets/fonts/outfit/Outfit-Thin.ttf
