--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   sqflite: ^2.3.2
   auto_size_text: ^3.0.0
   flutter_bloc: ^8.0.0
+  flutter_screenutil: ^5.9.0
 
 flutter_native_splash:
   image: assets/imgs/logo.png
