--- a/windows/runner/Runner.rc
+++ b/windows/runner/Runner.rc
@@ -90,12 +90,12 @@ BEGIN
         BLOCK "040904e4"
         BEGIN
             VALUE "CompanyName", "com.example" "\0"
-            VALUE "FileDescription", "ai_proof" "\0"
+            VALUE "FileDescription", "aiproof" "\0"
             VALUE "FileVersion", VERSION_AS_STRING "\0"
-            VALUE "InternalName", "ai_proof" "\0"
+            VALUE "InternalName", "aiproof" "\0"
             VALUE "LegalCopyright", "Copyright (C) 2024 com.example. All rights reserved." "\0"
-            VALUE "OriginalFilename", "ai_proof.exe" "\0"
-            VALUE "ProductName", "ai_proof" "\0"
+            VALUE "OriginalFilename", "aiproof.exe" "\0"
+            VALUE "ProductName", "aiproof" "\0"
             VALUE "ProductVersion", VERSION_AS_STRING "\0"
         END
     END
