--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,6 @@
-name: ai_proof
-description: "A new Flutter project."
+name: aiproof
+description: "A convenient mobile application tool for scanning and AI proofing written documents."
+
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
 publish_to: "none" # Remove this line if you wish to publish to pub.dev
@@ -30,35 +31,60 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  # A
+  auto_size_text: ^3.0.0
+  # B
+  # C
   camerawesome: ^2.0.1
-  ocr_scan_text: ^1.3.1
+  connectivity_plus: ^6.0.1
+  cupertino_icons: ^1.0.2
+  # D
+  # E
+  # F
   file_picker: ^5.5.0
+  flutter_bloc: ^8.0.0
   flutter_native_splash: ^2.3.10
+  flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.10+1
-  remixicon: ^1.2.0
+  # G
+  # H
+  # I
   intl: ^0.19.0
+  # J
+  # K
+  # L
   logger: ^2.1.0
   lottie: ^3.1.0
+  # M
+  # N
+  # O
+  ocr_scan_text: ^1.3.1
+  # P
   path: ^1.8.3
-  tutorial_coach_mark: ^1.2.11
+  # Q
+  # R
+  remixicon: ^1.2.0
+  # S
   sqflite: ^2.3.2
-  auto_size_text: ^3.0.0
-  flutter_bloc: ^8.0.0
-  flutter_screenutil: ^5.9.0
+  # T
+  tutorial_coach_mark: ^1.2.11
+  # U
+  # V
+  # W
+  # X
+  # Y
+  # Z
 
 flutter_native_splash:
-  image: assets/imgs/logo.png
-  background_image: assets/imgs/splash_background.png
+  image: assets/imgs/splash/logo.png
+  background_image: assets/imgs/splash/splash_background.png
 
   android: true
   ios: true
   fullscreen: true
 
   android_12:
-    image: assets/imgs/logo.png
+    image: assets/imgs/splash/logo.png
 
 dev_dependencies:
   flutter_test:
@@ -92,8 +118,8 @@ flutter:
   # For details regarding adding assets from package dependencies, see
   # https://flutter.dev/assets-and-images/#from-packages
   assets:
-    - assets/imgs/logo.png
-    - assets/imgs/splash_background.png
+    - assets/imgs/splash/logo.png
+    - assets/imgs/splash/splash_background.png
 
   fonts:
     - family: Outfit
