--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,7 @@ dependencies:
   # A
   auto_size_text: ^3.0.0
   # B
+  bloc: ^8.1.4
   # C
   camerawesome: ^2.0.1
   connectivity_plus: ^6.0.1
@@ -56,6 +57,7 @@ dependencies:
   logger: ^2.1.0
   lottie: ^3.1.0
   # M
+  meta: ^1.11.0
   # N
   # O
   ocr_scan_text: ^1.3.1
@@ -95,7 +97,7 @@ dev_dependencies:
   # activated in the `analysis_options.yaml` file located at the root of your
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
-  flutter_lints: ^2.0.0
+  flutter_lints: ^3.0.2
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
