--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,11 @@ dependencies:
   # B
   bloc: ^8.1.4
   # C
-  camerawesome: ^2.0.1
+  camera: ^0.10.6
   connectivity_plus: ^6.0.1
   cupertino_icons: ^1.0.2
   # D
+  dotted_border: ^2.1.0
   # E
   # F
   file_picker: ^5.5.0
@@ -48,6 +49,7 @@ dependencies:
   flutter_screenutil: ^5.9.0
   flutter_svg: ^2.0.10+1
   # G
+  google_mlkit_text_recognition: ^0.13.0
   # H
   # I
   intl: ^0.19.0
@@ -60,9 +62,9 @@ dependencies:
   meta: ^1.11.0
   # N
   # O
-  ocr_scan_text: ^1.3.1
   # P
   path: ^1.8.3
+  permission_handler: ^11.3.1
   # Q
   # R
   remixicon: ^1.2.0
