--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -75,6 +75,7 @@ dependencies:
   tutorial_coach_mark: ^1.2.11
   carousel_slider: ^4.2.1
   path_provider: ^2.1.3
+  syncfusion_flutter_charts: ^25.2.4
   # U
   # V
   # W
